--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flip_card: ^0.7.0
   flutter:
     sdk: flutter
+  flutter_animate: ^4.1.1+1
   flutter_bloc: ^8.1.2
   flutter_spinkit: ^5.1.0
   google_fonts: ^4.0.3
